# vscode-iot-workbench

./: .eslintignore  .eslintrc.json  .gitattributes  .gitignore  .travis.yml  .vscodeignore  CHANGELOG-PNP.md  CHANGELOG.md  README.md  azure-pipelines.yml  copyVendor.js  genAiKey.js  gts.cmd  gulpfile.js  jest.config.js  package-lock.json  package.json  tsconfig.json  updateCodeGenLink.js  updateDynamicResourceLink.js  webpack.config.js
.github/workflows/: close-resolved-issues.yml  need-attention-issues.yml  stale-issues.yml
DigitalTwinRepositoryViews/: command.js  index.html  main.js  style.css
__mocks__/: vscode.js
assets/modelRepository/: command.js  main.js  style.css  vue.js
demo/: bst.with.typedjson.ts  compile.sh  compile_and_run.sh  graph.with.typedjson.ts  package.json  tree.ts  tsconfig.json  typedjson.test.ts
devicedevex_dockerfiles/: README.md
devicedevex_dockerfiles/helper/: build-with-arg.sh  config.sample.json  push-to-devicedevex.sh
docs/: IoTDevKit.md  create-iothub-device.md  devkit-shakeshake.md  devkit-translator.md  devkit_door_monitor.md  devkit_remote_monitoringv2.md  esp32.md  iot-devkit.md  provision_azure_iothub.md  provision_azure_services.md  teXXmo_IoT_button_get_started.md
docs/embedded-linux/: README.md  configure-external-cmake-project-as-embedded-linux-project.md  embedded-linux-configure-project.md  embedded-linux-get-started.md  embedded-linux-pnp.md  embedded-linux-setup.md  generate-PnP-device-code-and-develop-in-containerized-toolchain.md
docs/esp32/: README.md  esp32-get-started.md  esp32-setup.md  esp32-state.md  esp32-stream-analytics-cosmos-db.md  m5stack-email-receiver.md
docs/iot-button/: teXXmo_IoT_button_get_started.md
docs/iot-devkit/: devkit-get-started.md  devkit-mqtt-client.md  devkit-ota.md  devkit-shakeshake.md  devkit-state.md  devkit-stream-analytics-cosmos-db.md  devkit-translator.md  devkit_door_monitor.md  devkit_dps.md  devkit_remote_monitoringv2.md
docs/raspberry-pi/: raspi-face-recognition-access-control.md  raspi-get-started.md  raspi-simple-led.md
docs/scripts/: genImageListToDelete.sh
hooks/: pre-commit  readme.md
pnpRepositoryViews/: command.js  index.html  main.js  style.css
resources/: blink.ino  boardlist.json  c_cpp_properties_macos.json  c_cpp_properties_win32.json  platformList.json  simple_iothub.ino  template.json
resources/Arduino/: boardlist.json
resources/DeviceModel/: CapabilityModel.json  Interface.json  Template.json  graph.json  sample.capabilitymodel.json  sample.interface.json  sample.template.json
resources/Linux/raspberrypi/: CMakeLists.txt  Dockerfile  c_cpp_properties.json  devcontainer.json  iothub_convenience_sample.c  template.json
resources/arduino/: boardlist.json
resources/arm/: cosmosdb.json  streamanalytics-input-iothub.json  streamanalytics-iothub.json  streamanalytics-output-cosmosdb.json  streamanalytics.json
resources/asaql/: query.asaql
resources/devicemodel/: CapabilityModel.json  graph.json  (+7 more)
resources/templates/ansic_cmake_connectionstring/: CMakeLists-Linux-SourceCode.txt  CMakeLists-Linux-Vcpkg.txt  CMakeLists-Windows-SourceCode.txt  CMakeLists-Windows-Vcpkg.txt  CMakeLists.txt  Readme.md  main.c  templatefiles.json
resources/templates/ansic_cmake_iotcsaskey/: CMakeLists-Linux-SourceCode.txt  CMakeLists-Linux-Vcpkg.txt  CMakeLists-Windows-SourceCode.txt  CMakeLists-Windows-Vcpkg.txt  CMakeLists.txt  Readme.md  main.c  templatefiles.json
resources/templates/embedded_linux/: CMakeLists.txt  main.c  templatefiles.json
scripts/: ChangePublisherIfRCVersion.js  copyVendor.js  genAiKey.js  modifyConfigIfRCVersion.js  nightlyBuild.js  updateConfig.js  updateResourceLink.js
snippets/: arduino.json
src/: ArduinoPackageManager.ts  AzureOperator.ts  CancelOperationError.ts  ContainerConfiger.ts  DeviceOperator.ts  DialogResponses.ts  DockerManager.ts  FileUtility.ts  IoTSettings.ts  OperatingResult.ts  ProjectEnvironmentConfiger.ts  TerminalManager.ts  UIUtility.ts  Utility.ts  WorkbenchExtension.ts  azure-account.api.d.ts  boardProvider.ts  configHandler.ts  constants.ts  contentProvider.ts  credentialStore.ts  deviceSecureWriter.ts  exampleExplorer.ts  exceptionHelper.ts  extension.ts  getmac.d.ts  helpProvider.ts  libraryManager.ts  localWebServer.ts  nsat.ts  projectInitializer.ts  scp.d.ts  scp2.d.ts  telemetry.ts  usbDetector.ts  utils.ts  vscode-express.ts
syntaxes/: asaql.tmLanguage.json  colorized.channel.tmLanguage
test/: Device.test.ts  IoTSettings.test.ts  commands.test.ts  config.test.ts  extension.test.ts  index.ts  pnpapi.test.ts  stub.ts  testUtility.ts
views/: example-aside-schema.json  example.html  example.js  help.html  vue.js
(+435 files in other folders)
